Fix footer bar overflow.

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -59,7 +59,6 @@
   }
 
   &__end {
-    width: 100%;
     padding: 1rem 8rem;
     background-color: $secondary-gray;
     display: flex;
